SERVER-17465 Do not attempt to use tcmalloc customizations with system tcmalloc